[tool.poetry]
name = "yaml-format"
version = "0.1.0"
description = "Simple YAML formatter."
authors = ["Michon van Dooren <me@maienm.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "yaml_format"}]

[tool.poetry.dependencies]
python = ">=3.7"
ruyaml = "^0.91.0"
yamllint = "^1.27.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"

[tool.poetry.scripts]
yaml-format = 'yaml_format:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
